# seqsum

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/seqsum/: __init__.py  cli.py  lib.py
tests/: test_all.py
tests/data/: MN908947-BA_2_86_1.fasta  collision.fasta  duplicate-names.fasta  duplicate-sequences.fasta  normalise-test.fasta  strict-fail.fasta  strict-pass.fasta
