[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seqsum"
authors = [{name = "Bede Constantinides", email = "bedeabc@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "defopt",
  "xxhash",
  "pyfastx"
]

[project.urls]
Home = "https://github.com/bede/seqsum"

[project.scripts]
seqsum = "seqsum.cli:main"
