[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seqsum"
authors = [{name = "Bede Constantinides", email = "bedeabc@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "defopt",
  "dnaio",
  "tqdm",
  "xxhash",
  "zstandard"
]

[project.urls]
Home = "https://github.com/bede/seqsum"

[project.scripts]
seqsum = "seqsum.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pre-commit>=3.5.0",
    "ruff>=0.1.5",
    "flit>=3.9.0"
]
